fix(reservation): remove legacy formData dependency and drop column
Refs: #105
(cherry picked from commit be4bad7fa4156186d8851219313957c1c5c08dc5)